python = ">=3.8.16"
pip-shims = {version = ">=0.5.2", optional = true}

[build-system]
# AVOID CHANGING REQUIRES: IT WILL BE UPDATED BY PYSCAFFOLD!
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# For smarter version schemes and other configuration options,
# check out https://github.com/pypa/setuptools_scm
version_scheme = "no-guess-dev"

[tool.poetry.extras]
pipfile_deprecated_finder = ["pipreqs", "requirementslib", "pip-shims"]

[tool.pyright]
include = ["src"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "src/experimental",
    "src/typestubs"
  ]
stubPath = "src/soda_data"
venv = ".venv"

reportMissingImports = "warning"
reportMissingTypeStubs = false
reportUnboundVariable = "warning"
